--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <header>
         <h1>Tic Tac Toe</h1>
     </header>
-    <div id="board">
-
-    </div>
+    <div id="board"></div>
+    <div id="resultDiv"></div>
     <script src="./script.js"></script>
 </body>
 </html>
