--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Tic Tac Toe</h1>
+        <h1>Tics Taco Toes</h1>
     </header>
     <div id="board"></div>
     <div id="resultDiv"></div>
